--- a/client/public/index.html
+++ b/client/public/index.html
@@ -38,6 +38,8 @@
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
+      Icons made by "https://flat-icons.com/" - "https://www.flaticon.com/"
+      https://www.flaticon.com/authors/freepik
     -->
   </body>
 </html>
